--- a/index.css
+++ b/index.css
@@ -1,5 +1,17 @@
 body {
   font-family: Arial;
+  background-color: rgb(0, 169, 199);
+  display: flex;
+  justify-content: center;
+}
+
+.main-content {
+  width: 580px;
+}
+
+p {
+  font-size: 30px;
+  text-align: center;
 }
 
 .input-grid,
@@ -7,11 +19,10 @@ body {
   display: grid;
   grid-template-columns: 200px 100px 150px 100px;
   gap: 10px;
-  align-items: center;
+  margin-bottom: 10px;
 }
 
 .input-grid {
-  margin-bottom: 10px;
   align-items: stretch;
 }
 
@@ -50,6 +61,16 @@ body {
 .delete-button {
   height: 37.75px;
   background-color: darkred;
+}
+
+.task-name,
+.task-time,
+.task-due-date {
+  background-color: white;
+  height: 37.75px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .clear-button {
