change bg color to a lighter shade

--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial;
-  background-color: rgb(0, 169, 199);
+  background-color: #22d3ee;
   display: flex;
   justify-content: center;
 }
