--- a/index.css
+++ b/index.css
@@ -1,158 +1,109 @@
 @import url("https://fonts.googleapis.com/css2?family=Sofadi+One&display=swap");
 
-body {
-  height: 100vh;
-  background-image: linear-gradient(130deg, #1e293b, rgb(131, 0, 131));
-  font-family: Arial;
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial;
+}
+
+.container {
+  width: 100%;
+  min-height: 100vh;
+  background-image: linear-gradient(130deg, #1e293b, rgb(131, 0, 131));
+  padding: 1.5rem 0;
   display: flex;
-  align-items: start;
   justify-content: center;
+  align-items: flex-start;
 }
 
-@media (max-width: 600px) {
-  .main-content {
-    background-image: linear-gradient(130deg, #1e293b, rgb(131, 0, 131));
-    padding: 10px;
-    width: 100vw;
-    height: 100vh;
-  }
-
-  .title {
-    color: white;
-  }
-
-  .clear-button {
-    background-color: black;
-  }
-
-  .task-header {
-    color: white;
-  }
+.todo-app {
+  width: clamp(20rem, 35.2vw + 9rem, 31rem);
+  padding: 2rem 1rem;
 }
 
-@media (min-width: 601px) and (max-width: 991px) {
-  .main-content {
-    background-color: aliceblue;
-    width: 400px;
-    margin-top: 50px;
-    padding: 20px 30px;
-    border-radius: 16px;
-  }
-
-  .title {
-    color: black;
-  }
-
-  .clear-button {
-    background-color: black;
-  }
-}
-
-@media (min-width: 992px) {
-  .main-content {
-    background-color: aliceblue;
-    width: 400px;
-    margin-top: 50px;
-    padding: 20px 30px;
-    border-radius: 16px;
-  }
-
-  .title {
-    color: black;
-  }
-
-  .clear-button {
-    background-color: black;
-  }
-}
-
-.title {
+.app-name {
   font-family: "Sofadi One";
-  font-size: 30px;
+  margin-bottom: 1rem;
+  color: white;
+  font-size: 2rem;
 }
 
-.input-grid,
-.todo-grid {
-  display: grid;
-  grid-template-columns: 3fr 1fr;
-  gap: 10px;
-  margin-bottom: 10px;
-}
-
-.input-grid {
-  align-items: stretch;
-}
-
-.task-header {
+.input-section {
+  background-color: white;
+  width: 100%;
+  height: 2.3rem;
+  border-radius: 1.15rem;
   display: flex;
-  margin-bottom: 10px;
-  font-size: 20px;
+  margin-bottom: 1rem;
+  padding-left: 1rem;
+  justify-content: space-between;
 }
 
-hr {
-  display: inline-block;
-  height: 3px;
-  width: 35%;
-  background-color: gray;
+.input-field {
+  flex: 1;
   border: none;
+  outline: none;
+  background-color: transparent;
+  font-size: 1rem;
 }
 
-.left-hr {
-  margin-left: 0;
-}
-
-.right-hr {
-  margin-right: 0;
-}
-
-.name-input {
-  font-size: 15px;
-  padding: 6px;
+::placeholder {
+  color: black;
 }
 
 .add-button {
-  background-color: green;
-}
-
-.add-button,
-.delete-button,
-.clear-button {
-  color: white;
+  background-color: #00a500;
   border: none;
-  font-size: 15px;
-  cursor: pointer;
-  transition: opacity 0.15s;
+  outline: none;
+  font-size: 1rem;
+  padding-left: clamp(1.5rem, 1.6vw + 1rem, 2rem);
+  padding-right: clamp(1.5rem, 1.6vw + 1rem, 2rem);
+  border-radius: 1.15rem;
 }
 
-.add-button:hover,
-.delete-button:hover,
-.clear-button:hover {
-  opacity: 0.7;
+ul li {
+  list-style: none;
+  font-size: 1rem;
+  color: white;
+  padding: 0.6rem 3rem 0.6rem 2rem;
+  word-wrap: break-word;
+  user-select: none;
+  position: relative;
 }
 
-.add-button:active,
-.delete-button:active,
-.clear-button:active {
-  opacity: 0.5;
+ul li::before {
+  content: "";
+  position: absolute;
+  width: 1.5rem;
+  height: 1.5rem;
+  background-image: url(./images/unchecked.svg);
+  background-size: cover;
+  left: 0;
+  top: 0.4rem;
 }
 
-.task-name {
-  border: 1px solid black;
-  background-color: white;
-  height: 37.75px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+ul li.checked {
+  text-decoration: line-through;
+  color: rgb(177, 177, 177);
 }
 
-.delete-button {
-  height: 37.75px;
-  background-color: darkred;
+ul li.checked::before {
+  background-image: url(./images/checked-white.svg);
 }
 
-.clear-button {
-  height: 37.75px;
-  width: 130px;
-  border-radius: 4px;
+ul li span {
+  position: absolute;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  background-image: url(./images/close.svg);
+  background-size: cover;
+  top: 0.1rem;
+  right: 0;
+  transition: background-color 0.15s;
+}
+
+ul li span:hover {
+  background-color: rgb(56, 56, 56);
 }
