--- a/index.css
+++ b/index.css
@@ -60,6 +60,15 @@
   padding-left: clamp(1.5rem, 1.6vw + 1rem, 2rem);
   padding-right: clamp(1.5rem, 1.6vw + 1rem, 2rem);
   border-radius: 1.15rem;
+  transition: opacity 0.15s;
+}
+
+.add-button:hover {
+  opacity: 0.7;
+}
+
+.add-button:active {
+  opacity: 0.5;
 }
 
 ul li {
@@ -89,7 +98,7 @@ ul li.checked {
 }
 
 ul li.checked::before {
-  background-image: url(./images/checked-white.svg);
+  background-image: url(./images/checked-green.svg);
 }
 
 ul li span {
