--- a/index.css
+++ b/index.css
@@ -148,6 +148,14 @@ ul li.checked::before {
   background-image: url(./images/checked-green.svg);
 }
 
+.due-date {
+  color: rgba(0, 0, 0, 0.616);
+}
+
+.due-date:hover {
+  color: black;
+}
+
 ul li span {
   position: absolute;
   width: 2rem;
@@ -162,4 +170,70 @@ ul li span {
 
 ul li span:hover {
   background-color: rgba(80, 80, 80, 0.651);
+}
+
+ul li p {
+  font-size: 14px;
+  color: rgb(177, 177, 177);
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.date-input,
+.time-input {
+  border: 3px solid rgba(0, 0, 0, 0.6);
+  border-radius: 6px;
+  padding: 5px 10px;
+}
+
+.date-input:hover,
+.time-input:hover {
+  border: 3px solid black;
+}
+
+.modal-submit-btn {
+  border: none;
+  background-color: #1e293b;
+  color: rgb(255, 255, 255);
+  padding: 8px 12px;
+  font-size: 1rem;
+  border-radius: 4px;
+  transition: opacity 0.15s;
+}
+
+.modal-submit-btn:hover {
+  opacity: 0.8;
 }
